Fix form spacing

--- a/frontend/assets/scss/components/add-recipe-form.component.scss
+++ b/frontend/assets/scss/components/add-recipe-form.component.scss
@@ -10,7 +10,7 @@
     display: block;
     margin-top: $spacingSmall;
     background-color: transparent;
-    padding: $spacingLargeMobile + 1px;
+    padding: $spacingMediumMobile + 1px;
 
     border: none;
     font-size: $fontSizeMedium;
@@ -20,14 +20,14 @@
 
     caret-color: $green;
     @media screen and (min-width: $tabletWidth) {
-      padding: $spacingLarge + 1px;
+      padding: $spacingMedium + 1px;
     }
     &:focus {
       outline: none;
       border: 2px solid $green;
-      padding: $spacingLargeMobile;
+      padding: $spacingMediumMobile;
       @media screen and (min-width: $tabletWidth) {
-        padding: $spacingLarge;
+        padding: $spacingMedium;
       }
     }
   }
@@ -50,7 +50,6 @@
     width: 100%;
     height: 150px;
     resize: none;
-    margin-bottom: $spacingXXLarge;
     font-size: $fontSizeLargeMobile;
     color: $blue;
     @media screen and (min-width: $tabletWidth) {
@@ -91,7 +90,7 @@
     }
   }
   &__ingredients {
-    margin-bottom: $spacingXLarge;
+    margin-bottom: $spacingMedium;
   }
 
   &__ingredient {
@@ -99,6 +98,10 @@
   }
   &__instructions {
     padding-left: $spacingLarge;
+
+    & label {
+      width: 100%;
+    }
   }
 
   &__instruction {
